--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1884,6 +1884,67 @@ body{
 	}
 }
 
+.single-product-quickview{
+  .single-product-quickview-images{
+    position: relative;
+    .slick-list{
+      border: 1px solid $border-third-color;
+    }
+    .slick-arrow{
+      @include transform(translate(0));
+      color: $title-text;
+      border:1px solid $black;
+      bottom: 10px;
+      top:auto;
+      width: 30px;
+      height: 30px;
+      z-index: 10;
+      font-size: 0;
+      position: absolute;
+      background: $qty_bg;
+      &.slick-disabled{
+        @include opacity(0.6);
+      }
+      &.slick-prev{
+        right: 50px;
+        left: auto;
+        &:before{
+          @include FontAwesome('\f104');
+          font-size: 20px;
+          line-height: 28px;
+        }
+        &:after{
+          width: 11px;
+          content: "";
+          height: 1px;
+          background: $title-text;
+          position: absolute;
+          left: 100%;
+          top: 15px;
+        }
+      }
+      &.slick-next{
+        right: 10px;
+        &:before{
+          @include FontAwesome('\f105');
+          font-size: 20px;
+          line-height: 28px;
+        }
+      }
+      &:before{
+        color: $title-text;
+      }
+      &:hover,&:focus{
+        color: $primary-color;
+        border-color: $primary-color;
+        &:before{
+          color: $primary-color;
+        }
+      }
+    }
+  }
+}
+
 
 div.swatch-wrapper{
   margin: 5px;
