--- a/wp-content/plugins/woocommerce/assets/css/dashboard.css
+++ b/wp-content/plugins/woocommerce/assets/css/dashboard.css
@@ -1,61 +1,261 @@
-/*
-Error: File to import not found or unreadable: bourbon.
-        on line 9 of dashboard.scss
+@charset "UTF-8";
+/**
+ * dashboard.scss
+ * Styles for WooCommerce dashboard widgets, only loaded on the dashboard itself.
+ */
+/**
+ * Imports
+ */
+/**
+ * Deprecated
+ * Fallback for bourbon equivalent
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Vendor prefix no longer required.
+ */
+/**
+ * Deprecated
+ * Use bourbon mixin instead `@include transform(scale(1.5));`
+ */
+/**
+ * Deprecated
+ * Use bourbon mixin instead `@include box-sizing(border-box);`
+ */
+/**
+ * Objects
+ */
+/**
+ * WooCommerce CSS Variables
+ */
+/**
+ * _fonts.scss
+ * Custom WooCommerce fonts.
+ */
+@font-face {
+  font-family: 'star';
+  src: url("../fonts/star.eot");
+  src: url("../fonts/star.eot?#iefix") format("embedded-opentype"), url("../fonts/star.woff") format("woff"), url("../fonts/star.ttf") format("truetype"), url("../fonts/star.svg#star") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'WooCommerce';
+  src: url("../fonts/WooCommerce.eot");
+  src: url("../fonts/WooCommerce.eot?#iefix") format("embedded-opentype"), url("../fonts/WooCommerce.woff") format("woff"), url("../fonts/WooCommerce.ttf") format("truetype"), url("../fonts/WooCommerce.svg#WooCommerce") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+/**
+ * Styling begins
+ */
+ul.woocommerce_stats {
+  overflow: hidden;
+  zoom: 1; }
+  ul.woocommerce_stats li {
+    width: 25%;
+    padding: 0 1em;
+    text-align: center;
+    float: left;
+    font-size: 0.8em;
+    border-left: 1px solid #fff;
+    border-right: 1px solid #ececec;
+    text-align: center;
+    box-sizing: border-box; }
+  ul.woocommerce_stats li:first-child {
+    border-left: 0; }
+  ul.woocommerce_stats li:last-child {
+    border-right: 0; }
+  ul.woocommerce_stats strong {
+    font-family: Georgia,"Times New Roman","Bitstream Charter",Times,serif;
+    font-size: 4em;
+    line-height: 1.2em;
+    font-weight: normal;
+    text-align: center;
+    display: block; }
 
-4:  *\/
-5: 
-6: /**
-7:  * Imports
-8:  *\/
-9: @import "bourbon";
-10: @import "mixins";
-11: @import "variables";
-12: @import "fonts";
-13: 
-14: /**
+#woocommerce_dashboard_status .inside {
+  padding: 0;
+  margin: 0; }
+#woocommerce_dashboard_status .wc_status_list {
+  overflow: hidden;
+  margin: 0; }
+  #woocommerce_dashboard_status .wc_status_list li {
+    width: 50%;
+    float: left;
+    padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    border-top: 1px solid #ececec;
+    color: #aaa; }
+    #woocommerce_dashboard_status .wc_status_list li a {
+      display: block;
+      color: #aaa;
+      padding: 9px 12px;
+      -webkit-transition: all ease .5s;
+      position: relative;
+      font-size: 12px; }
+      #woocommerce_dashboard_status .wc_status_list li a .wc_sparkline {
+        width: 4em;
+        height: 2em;
+        display: block;
+        float: right;
+        position: absolute;
+        right: 0;
+        top: 50%;
+        margin-right: 12px;
+        margin-top: -1.25em; }
+      #woocommerce_dashboard_status .wc_status_list li a strong {
+        font-size: 18px;
+        line-height: 1.2em;
+        font-weight: normal;
+        display: block;
+        color: #21759b; }
+      #woocommerce_dashboard_status .wc_status_list li a:hover {
+        color: #2ea2cc; }
+        #woocommerce_dashboard_status .wc_status_list li a:hover:before,
+        #woocommerce_dashboard_status .wc_status_list li a:hover strong {
+          color: #2ea2cc !important; }
+      #woocommerce_dashboard_status .wc_status_list li a:before {
+        font-family: 'WooCommerce';
+        speak: none;
+        font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        margin: 0;
+        text-indent: 0;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        content: "";
+        font-size: 2em;
+        position: relative;
+        width: auto;
+        line-height: 1.2em;
+        color: #464646;
+        float: left;
+        margin-right: 12px;
+        margin-bottom: 12px; }
+  #woocommerce_dashboard_status .wc_status_list li:first-child {
+    border-top: 0; }
+  #woocommerce_dashboard_status .wc_status_list li.sales-this-month {
+    width: 100%; }
+    #woocommerce_dashboard_status .wc_status_list li.sales-this-month a:before {
+      content: "\e01f"; }
+  #woocommerce_dashboard_status .wc_status_list li.best-seller-this-month {
+    width: 100%; }
+    #woocommerce_dashboard_status .wc_status_list li.best-seller-this-month a:before {
+      content: "\e006"; }
+  #woocommerce_dashboard_status .wc_status_list li.processing-orders {
+    border-right: 1px solid #ececec; }
+    #woocommerce_dashboard_status .wc_status_list li.processing-orders a:before {
+      content: "\e011";
+      color: #7ad03a; }
+  #woocommerce_dashboard_status .wc_status_list li.on-hold-orders a:before {
+    content: "\e033";
+    color: #999; }
+  #woocommerce_dashboard_status .wc_status_list li.low-in-stock {
+    border-right: 1px solid #ececec; }
+    #woocommerce_dashboard_status .wc_status_list li.low-in-stock a:before {
+      content: "\e02c";
+      color: #ffba00; }
+  #woocommerce_dashboard_status .wc_status_list li.out-of-stock a:before {
+    content: "\e02c";
+    color: #a00; }
 
-Backtrace:
-dashboard.scss:9
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/import_node.rb:45:in `import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/import_node.rb:28:in `imported_file'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/import_node.rb:37:in `css_import?'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:311:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/engine.rb:378:in `_render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/engine.rb:295:in `render_with_sourcemap'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:490:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/plugin.rb:82:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/exec/sass_scss.rb:361:in `watch_or_update'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/exec/sass_scss.rb:51:in `process_result'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/exec/base.rb:52:in `parse'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/lib/sass/exec/base.rb:19:in `parse!'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.19/bin/scss:13:in `<top (required)>'
-/usr/bin/scss:23:in `load'
-/usr/bin/scss:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: bourbon.\A         on line 9 of dashboard.scss\A \A 4:  */\A 5: \A 6: /**\A 7:  * Imports\A 8:  */\A 9: @import \"bourbon\";\A 10: @import \"mixins\";\A 11: @import \"variables\";\A 12: @import \"fonts\";\A 13: \A 14: /**"; }
+#woocommerce_dashboard_recent_reviews li {
+  line-height: 1.5em;
+  margin-bottom: 12px; }
+#woocommerce_dashboard_recent_reviews h4.meta {
+  line-height: 1.4;
+  margin: -.2em 0 0 0;
+  font-weight: normal;
+  color: #999; }
+#woocommerce_dashboard_recent_reviews blockquote {
+  padding: 0;
+  margin: 0; }
+#woocommerce_dashboard_recent_reviews .avatar {
+  float: left;
+  margin: 0 10px 5px 0; }
+#woocommerce_dashboard_recent_reviews .star-rating {
+  float: right;
+  overflow: hidden;
+  position: relative;
+  height: 1.5em;
+  line-height: 1.5;
+  margin-left: .5em;
+  width: 5.4em;
+  font-family: 'WooCommerce' !important; }
+  #woocommerce_dashboard_recent_reviews .star-rating:before {
+    content: "\e021\e021\e021\e021\e021";
+    color: #b3b3b3;
+    float: left;
+    top: 0;
+    left: 0;
+    position: absolute;
+    letter-spacing: 0.1em;
+    letter-spacing: 0\9; }
+  #woocommerce_dashboard_recent_reviews .star-rating span {
+    overflow: hidden;
+    float: left;
+    top: 0;
+    left: 0;
+    position: absolute;
+    padding-top: 1.5em; }
+  #woocommerce_dashboard_recent_reviews .star-rating span:before {
+    content: "\e020\e020\e020\e020\e020";
+    top: 0;
+    position: absolute;
+    left: 0;
+    letter-spacing: 0.1em;
+    letter-spacing: 0\9;
+    color: #9c5d90; }
+
+#dash-right-now li.product-count a:before {
+  font-family: 'WooCommerce';
+  content: "\e01d"; }
+
+/*# sourceMappingURL=dashboard.css.map */
