--- a/wp-content/themes/wingman/assets/css/_mixin.scss
+++ b/wp-content/themes/wingman/assets/css/_mixin.scss
@@ -447,9 +447,29 @@
 }
 
 /// Calc
-@mixin FontAwesome($key) {
-  font-family: FontAwesome;
-  content: "#{$key}";
-  font-style: normal;
+@mixin FontAwesome($glyph, $font : 'FontAwesome') {
+  font-family: $font;
+  content: "#{$glyph}";
+  speak: none;
   font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
+}
+
+
+%clearfix {
+  *zoom: 1;
+  &:before, &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+}
+
+%marginShortcode {
+  margin-bottom: 30px;
 }
