--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -234,10 +234,14 @@
   .woocommerce .yith-wcwl-wishlistexistsbrowse a:before,
   .woocommerce .yith-wcwl-wishlistexistsbrowse a.add_to_wishlist:before {
     font-size: 14px;
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
     content: "";
-    font-style: normal;
+    speak: none;
     font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: none;
     height: 100%;
     left: 0;
     line-height: 40px;
@@ -252,10 +256,14 @@
 .woocommerce .yith-wcwl-wishlistexistsbrowse a:before {
   content: '\f004'; }
 .woocommerce .product-quick-view:before {
-  font-family: FontAwesome;
+  font-family: "FontAwesome";
   content: "";
-  font-style: normal;
+  speak: none;
   font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
   font-size: 14px;
   height: 100%;
   left: 0;
@@ -278,10 +286,14 @@
   opacity: 1; }
 .woocommerce .product-quick-view.loading:before,
 .woocommerce .button.loading:before {
-  font-family: FontAwesome;
+  font-family: "FontAwesome";
   content: "";
-  font-style: normal;
+  speak: none;
   font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  text-decoration: none;
   -webkit-animation: spin 2s linear infinite;
   -khtml-animation: spin 2s linear infinite;
   -moz-animation: spin 2s linear infinite;
@@ -338,10 +350,14 @@
     border-color: #e5e5e5; }
   .woocommerce .woocommerce-per-page:after,
   .woocommerce .woocommerce-ordering:after {
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
     content: "";
-    font-style: normal;
+    speak: none;
     font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: none;
     position: absolute;
     -webkit-transform: translateY(-50%);
     -khtml-transform: translateY(-50%);
@@ -457,10 +473,14 @@
   .woocommerce.compare-button .blockUI.blockOverlay:before {
     background: none !important;
     color: #FFFFFF;
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
     content: "";
-    font-style: normal;
+    speak: none;
     font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: none;
     -webkit-animation: spin 2s linear infinite;
     -khtml-animation: spin 2s linear infinite;
     -moz-animation: spin 2s linear infinite;
@@ -1394,10 +1414,14 @@ body .mCSB_scrollTools {
     .woocommerce .added_to_cart.loading:after, .woocommerce .added_to_cart.added:after,
     .woocommerce .addtocart_button.loading:after,
     .woocommerce .addtocart_button.added:after {
-      font-family: FontAwesome;
+      font-family: "FontAwesome";
       content: "";
-      font-style: normal;
+      speak: none;
       font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      text-decoration: none;
       -webkit-animation: spin 2s linear infinite;
       -khtml-animation: spin 2s linear infinite;
       -moz-animation: spin 2s linear infinite;
@@ -1411,10 +1435,14 @@ body .mCSB_scrollTools {
       font-size: 20px; }
   .woocommerce .added_to_cart.added:after,
   .woocommerce .addtocart_button.added:after {
-    font-family: FontAwesome;
+    font-family: "FontAwesome";
     content: "";
-    font-style: normal;
+    speak: none;
     font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    -webkit-font-smoothing: antialiased;
+    text-decoration: none;
     filter: alpha(opacity=100);
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     -webkit-opacity: 1;
@@ -1521,10 +1549,14 @@ body .mCSB_scrollTools {
         right: 50px;
         left: auto; }
         .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:before {
-          font-family: FontAwesome;
+          font-family: "FontAwesome";
           content: "";
-          font-style: normal;
+          speak: none;
           font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          -webkit-font-smoothing: antialiased;
+          text-decoration: none;
           font-size: 20px;
           line-height: 28px; }
         .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:after {
@@ -1538,10 +1570,14 @@ body .mCSB_scrollTools {
       .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-next {
         right: 10px; }
         .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-next:before {
-          font-family: FontAwesome;
+          font-family: "FontAwesome";
           content: "";
-          font-style: normal;
+          speak: none;
           font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          -webkit-font-smoothing: antialiased;
+          text-decoration: none;
           font-size: 20px;
           line-height: 28px; }
       .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:before {
@@ -1595,19 +1631,27 @@ body .mCSB_scrollTools {
       .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-prev {
         left: 18px; }
         .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-prev:before {
-          font-family: FontAwesome;
+          font-family: "FontAwesome";
           content: "";
-          font-style: normal;
+          speak: none;
           font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          -webkit-font-smoothing: antialiased;
+          text-decoration: none;
           line-height: 16px; }
       .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-next {
         right: 15px;
         left: auto; }
         .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow.slick-next:before {
-          font-family: FontAwesome;
+          font-family: "FontAwesome";
           content: "";
-          font-style: normal;
-          font-weight: normal; }
+          speak: none;
+          font-weight: normal;
+          font-variant: normal;
+          text-transform: none;
+          -webkit-font-smoothing: antialiased;
+          text-decoration: none; }
       .woocommerce .product-detail-thumbarea .single-product-main-thumbnails .slick-arrow:before {
         color: #252525;
         font-size: 16px;
@@ -1664,19 +1708,27 @@ body .mCSB_scrollTools {
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev {
           top: 24px; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-prev:before {
-            font-family: FontAwesome;
+            font-family: "FontAwesome";
             content: "";
-            font-style: normal;
+            speak: none;
             font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            -webkit-font-smoothing: antialiased;
+            text-decoration: none;
             line-height: 16px; }
         .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-next {
           bottom: 15px;
           top: auto; }
           .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-arrow.slick-next:before {
-            font-family: FontAwesome;
+            font-family: "FontAwesome";
             content: "";
-            font-style: normal;
-            font-weight: normal; }
+            speak: none;
+            font-weight: normal;
+            font-variant: normal;
+            text-transform: none;
+            -webkit-font-smoothing: antialiased;
+            text-decoration: none; }
       .woocommerce .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails:hover .slick-arrow {
         filter: alpha(opacity=100);
         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
@@ -2317,10 +2369,14 @@ div.swatch-wrapper {
       font-size: 0; }
       .woocommerce table.wishlist_table tbody td.product-add-to-cart a.added:after {
         margin-left: -8px;
-        font-family: FontAwesome;
+        font-family: "FontAwesome";
         content: "";
-        font-style: normal;
+        speak: none;
         font-weight: normal;
+        font-variant: normal;
+        text-transform: none;
+        -webkit-font-smoothing: antialiased;
+        text-decoration: none;
         font-size: 16px;
         position: absolute;
         top: 0;
