--- a/wp-content/plugins/kt_mailchimp/assets/styles.scss
+++ b/wp-content/plugins/kt_mailchimp/assets/styles.scss
@@ -1,5 +1,18 @@
 
+.kt-mailchimp-wrapper{
+  margin-bottom: 30px;
+  .mailchimp-before{
+    margin-bottom: 10px;
+  }
+
+  .widget-container &{
+    margin-bottom: 0;
+  }
+}
+
+
 .mailchimp-form {
+
 
 
   .mailchimp-error,
@@ -10,9 +23,10 @@
   }
 
   .mailchimp-error{
+    color: #a94442;
     &:before {
         margin-right: 5px;
-        content: '\f0da';
+        content: '\f057';
         font-family: FontAwesome;
         font-weight: normal;
         font-style: normal;
@@ -20,20 +34,108 @@
   }
 
   .mailchimp-success{
+    color: #3c763d;
     &:before {
+      margin-right: 5px;
+      content: '\f05a';
+      font-family: FontAwesome;
+      font-weight: normal;
+      font-style: normal;
     }
+  }
+
+  .mailchimp-input-fname,
+  .mailchimp-input-lname,
+  .mailchimp-input-email{
+    margin-bottom: 15px;
   }
 
   .mailchimp-email-button{
     position: relative;
+    .mailchimp-input-button{
+      position: absolute;
+      right: 0;
+      top: 50%;
 
+      -webkit-transform: translateY(-50%);
+      -moz-transform: translateY( -50%);
+      -ms-transform: translateY( -50%);
+      transform: translateY( -50%);
+
+    }
 
   }
 
-  .mailchimp-input-button{
-    position: absolute;
-    right: 0;
-    top: 0;
+  &.mailchimp-layout-1{
+
+    input[type=text],
+    input[type=email]{
+      border: none;
+      border-bottom: 1px solid #252525;
+      color: #707070;
+      font-size: 14px;
+      height: 35px;
+      padding: 5px 0;
+
+
+
+    }
+
+    input[type=email]{
+      padding-right: 30px;
+    }
+
+    .mailchimp-input-email{
+      margin-bottom: 0;
+    }
+
+    .mailchimp-input-button {
+      height: 100%;
+      .btn {
+        background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
+        border-color: transparent;
+        height: 100%;
+        overflow: hidden;
+        text-indent: -999px;
+        width: 20px;
+        padding: 0;
+        position: relative;
+        &:before{
+          font-family: FontAwesome;
+          content: '\f178';
+          font-weight: normal;
+          display: block;
+          font-size: 14px;
+          color: #252525;
+          text-indent: 0;
+          position: absolute;
+          right: -1px;
+          text-align: right;
+          top: 6px;
+        }
+        &.loading{
+          &:before{
+            content: '\f110';
+            -webkit-animation: fa-spin 2s infinite linear;
+            animation: fa-spin 2s infinite linear;
+          }
+        }
+      }
+    }
   }
+
+
+  &.mailchimp-layout-2{
+
+    .mailchimp-input-button{
+      button{
+        width: 100%;
+      }
+    }
+  }
+
+
+
+
 
 }
