--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -633,7 +633,7 @@
   font-size: 24px; }
 .woocommerce mark, .woocommerce .mark {
   background: #82c14f;
-  color: #FFFFFF; }
+  color: #252525; }
 
 /** ================================================
     2. Woocommerce shopping cart
