--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -79,11 +79,11 @@ p {
 /*
  * 1.2. Helper CSS
  */
-.kt-table {
+.display-table{
   display: table;
   width: 100%;
   height: 100%;
-  .kt-col {
+  .display-cell{
     display: table-cell;
     vertical-align: middle;
   }
@@ -3781,7 +3781,7 @@ article.post-item.post-layout-classic {
         text-align: center;
         position: relative;
         @include transition('all 0.5s ease 0s');
-
+        letter-spacing: 0;
         font-size: 16px;
         height: 34px;
         line-height: 32px;
