--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1536,7 +1536,7 @@ body .mCSB_scrollTools {
       -o-transform: translate(0);
       transform: translate(0);
       color: #252525;
-      border: 1px solid #000000;
+      border: 1px solid #dfdfdf;
       bottom: 10px;
       top: auto;
       width: 30px;
@@ -1544,19 +1544,23 @@ body .mCSB_scrollTools {
       z-index: 10;
       font-size: 0;
       position: absolute;
-      background: #f4f6f9; }
+      background: #FFFFFF; }
       .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-disabled {
-        filter: alpha(opacity=60);
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=60)";
-        -webkit-opacity: 0.6;
-        -khtml-opacity: 0.6;
-        -moz-opacity: 0.6;
-        -ms-opacity: 0.6;
-        -o-opacity: 0.6;
-        opacity: 0.6; }
+        filter: alpha(opacity=30);
+        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
+        -webkit-opacity: 0.3;
+        -khtml-opacity: 0.3;
+        -moz-opacity: 0.3;
+        -ms-opacity: 0.3;
+        -o-opacity: 0.3;
+        opacity: 0.3;
+        cursor: default; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:before, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-next:before {
+        font-size: 18px;
+        line-height: 28px;
+        color: #b2b2b2; }
       .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev {
-        right: 50px;
-        left: auto; }
+        right: 50px; }
         .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:before {
           font-family: "FontAwesome";
           content: "";
@@ -1565,14 +1569,12 @@ body .mCSB_scrollTools {
           font-variant: normal;
           text-transform: none;
           -webkit-font-smoothing: antialiased;
-          text-decoration: none;
-          font-size: 20px;
-          line-height: 28px; }
+          text-decoration: none; }
         .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow.slick-prev:after {
           width: 11px;
           content: "";
           height: 1px;
-          background: #252525;
+          background: #dfdfdf;
           position: absolute;
           left: 100%;
           top: 15px; }
@@ -1586,16 +1588,14 @@ body .mCSB_scrollTools {
           font-variant: normal;
           text-transform: none;
           -webkit-font-smoothing: antialiased;
-          text-decoration: none;
-          font-size: 20px;
-          line-height: 28px; }
-      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:before {
-        color: #252525; }
-      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:hover, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:focus {
-        color: #82c14f;
-        border-color: #82c14f; }
-        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:hover:before, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:focus:before {
-          color: #82c14f; }
+          text-decoration: none; }
+      .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:not(.slick-disabled) {
+        cursor: pointer; }
+        .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:not(.slick-disabled):hover, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:not(.slick-disabled):focus {
+          color: #82c14f;
+          border-color: #82c14f; }
+          .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:not(.slick-disabled):hover:before, .woocommerce .product-detail-thumbarea .single-product-main-images .slick-arrow:not(.slick-disabled):focus:before {
+            color: #82c14f; }
   .woocommerce .product-detail-thumbarea .single-product-main-thumbnails {
     margin-bottom: 30px;
     margin-left: -14px;
