--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -1551,63 +1551,73 @@ body{
 	}
 	.product-detail-thumbarea{
 		position: relative;
+
 		.single-product-main-images{
-        margin-bottom: 30px;
-        .slick-list{
-          border: 1px solid $border-third-color;
-        }
-        .slick-arrow{
-        @include transform(translate(0));
-        color: $title-text;
-        border:1px solid $black;
-        bottom: 10px;
-        top:auto;
-        width: 30px;
-        height: 30px;
-        z-index: 10;
-        font-size: 0;
-        position: absolute;
-        background: $qty_bg;
-        &.slick-disabled{
-          @include opacity(0.6);
-        }
-        &.slick-prev{
-          right: 50px;
-          left: auto;
-          &:before{
-            @include FontAwesome('\f104');
-            font-size: 20px;
-            line-height: 28px;
+          margin-bottom: 30px;
+          .slick-list{
+            border: 1px solid $border-third-color;
           }
-          &:after{
-            width: 11px;
-            content: "";
-            height: 1px;
-            background: $title-text;
+          .slick-arrow{
+            @include transform(translate(0));
+            color: $title-text;
+            border:1px solid $border-third-color;
+            bottom: 10px;
+            top:auto;
+            width: 30px;
+            height: 30px;
+            z-index: 10;
+            font-size: 0;
             position: absolute;
-            left: 100%;
-            top: 15px;
+            background: $white;
+
+            &.slick-disabled{
+              @include opacity(0.3);
+              cursor: default;
+            }
+
+            &.slick-prev,
+            &.slick-next{
+              &:before{
+                font-size: 18px;
+                line-height: 28px;
+                color: $social-color;
+              }
+            }
+
+            &.slick-prev{
+              right: 50px;
+              &:before{
+                @include FontAwesome('\f104');
+              }
+              &:after{
+                width: 11px;
+                content: "";
+                height: 1px;
+                background: $border-third-color;
+                position: absolute;
+                left: 100%;
+                top: 15px;
+              }
+            }
+            &.slick-next{
+              right: 10px;
+              &:before{
+                @include FontAwesome('\f105');
+              }
+            }
+
+            &:not(.slick-disabled){
+              cursor: pointer;
+              &:hover,
+              &:focus{
+                color: $primary-color;
+                border-color: $primary-color;
+                &:before{
+                  color: $primary-color;
+                }
+              }
+            }
           }
-        }
-        &.slick-next{
-          right: 10px;
-          &:before{
-            @include FontAwesome('\f105');
-            font-size: 20px;
-            line-height: 28px;
-          }
-        }
-        &:before{
-          color: $title-text;
-        }
-        &:hover,&:focus{
-          color: $primary-color;
-          border-color: $primary-color;
-          &:before{
-            color: $primary-color;
-          }
-        }
-      }
 		}
 		.single-product-main-thumbnails{
 			margin-bottom: 30px;
