finish all categories

--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -413,6 +413,14 @@ select:not([multiple]) {
     color: #FFFFFF; }
     .btn-accent:hover, .btn-accent:focus, .btn-accent:active {
       color: #FFFFFF; }
+  .btn-light {
+    background: #FFFFFF;
+    border-color: #FFFFFF;
+    color: #707070; }
+    .btn-light:hover, .btn-light:focus, .btn-light:active {
+      border-color: #e5e5e5;
+      background: #e5e5e5;
+      color: #707070; }
   .btn-animation span {
     -webkit-transform: translateX(0);
     -khtml-transform: translateX(0);
@@ -420,12 +428,12 @@ select:not([multiple]) {
     -ms-transform: translateX(0);
     -o-transform: translateX(0);
     transform: translateX(0);
-    -webkit-transition: all .3s ease-in-out 0s;
-    -khtml-transition: all .3s ease-in-out 0s;
-    -moz-transition: all .3s ease-in-out 0s;
-    -ms-transition: all .3s ease-in-out 0s;
-    -o-transition: all .3s ease-in-out 0s;
-    transition: all .3s ease-in-out 0s;
+    -webkit-transition: all 0.3s ease 0s;
+    -khtml-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -ms-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
     display: inline-block;
     position: relative; }
     .btn-animation span i {
@@ -437,12 +445,12 @@ select:not([multiple]) {
       -ms-opacity: 0;
       -o-opacity: 0;
       opacity: 0;
-      -webkit-transition: all .3s ease-in-out 0s;
-      -khtml-transition: all .3s ease-in-out 0s;
-      -moz-transition: all .3s ease-in-out 0s;
-      -ms-transition: all .3s ease-in-out 0s;
-      -o-transition: all .3s ease-in-out 0s;
-      transition: all .3s ease-in-out 0s;
+      -webkit-transition: all 0.3s ease 0s;
+      -khtml-transition: all 0.3s ease 0s;
+      -moz-transition: all 0.3s ease 0s;
+      -ms-transition: all 0.3s ease 0s;
+      -o-transition: all 0.3s ease 0s;
+      transition: all 0.3s ease 0s;
       -webkit-transform: translate(30px, -50%);
       -khtml-transform: translate(30px, -50%);
       -moz-transform: translate(30px, -50%);
