--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1279,15 +1279,15 @@ body .mCSB_scrollTools {
     .woocommerce ul.shop-products.list li.product .added_to_cart {
       float: right;
       width: 50%; }
-  .woocommerce ul.shop-products.list .kt-woocommerce-tool-lists {
+  .woocommerce ul.shop-products.list .kt-woocommerce-tool-list {
     width: 266px;
     position: relative;
     height: 40px;
     margin-top: 60px;
     display: block; }
-    .woocommerce ul.shop-products.list .kt-woocommerce-tool-lists .product-image-tool,
-    .woocommerce ul.shop-products.list .kt-woocommerce-tool-lists .added_to_cart,
-    .woocommerce ul.shop-products.list .kt-woocommerce-tool-lists .addtocart_button {
+    .woocommerce ul.shop-products.list .kt-woocommerce-tool-list .product-image-tool,
+    .woocommerce ul.shop-products.list .kt-woocommerce-tool-list .added_to_cart,
+    .woocommerce ul.shop-products.list .kt-woocommerce-tool-list .addtocart_button {
       -webkit-transform: translateY(0);
       -khtml-transform: translateY(0);
       -moz-transform: translateY(0);
@@ -2586,6 +2586,85 @@ div.swatch-wrapper {
         left: 0; }
       .woocommerce-category-products-tab ul.block-heading-tabs li.ui-tabs-active a:after {
         right: 0; }
+
+/**
+ * Banner Categories
+ */
+.banner {
+  position: relative;
+  text-align: center;
+  overflow: hidden;
+  margin-bottom: 30px; }
+  .banner.banner-dark:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 5;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -khtml-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s; }
+  .banner:hover.banner-dark:after {
+    background: rgba(0, 0, 0, 0.6); }
+  .banner img {
+    width: 100%; }
+  .banner .banner-content {
+    width: 100%;
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+    -khtml-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    z-index: 10;
+    padding: 30px; }
+    .banner .banner-content > *:last-child {
+      margin-bottom: 0; }
+  .banner .banner-link {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 15; }
+  .banner.position-bottom .banner-content {
+    bottom: 0;
+    left: 0;
+    top: auto;
+    -webkit-transform: translate(0px, 0px);
+    -khtml-transform: translate(0px, 0px);
+    -moz-transform: translate(0px, 0px);
+    -ms-transform: translate(0px, 0px);
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px); }
+  .banner.position-bottom .btn {
+    padding-left: 50px;
+    padding-right: 50px; }
+  .banner.position-top .banner-content {
+    top: 0;
+    left: 0;
+    -webkit-transform: translate(0px, 0px);
+    -khtml-transform: translate(0px, 0px);
+    -moz-transform: translate(0px, 0px);
+    -ms-transform: translate(0px, 0px);
+    -o-transform: translate(0px, 0px);
+    transform: translate(0px, 0px); }
+  .banner.position-top .btn {
+    padding-left: 50px;
+    padding-right: 50px; }
+  .banner.banner-left {
+    text-align: left; }
+  .banner.banner-right {
+    text-align: right; }
 
 /**
  * Products carousel tab
